# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.23.10
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-sync: Support for option -+ and variable NONFATAL_HOOKS.

*eix-0.23.9
*eix-0.23.8
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Provide status line also for eix-update
	- Do not update status line if output is not a terminal
	- Introduce {NO,FORCE_}{COLORS,STATUSLINE,PERCENTAGE}.
	  The previous FORCE_USECOLORS and new NOCOLOR default them all.
	- eix-remote: Change ownership before calling wget, see
	  http://developer.berlios.de/bugs/?func=detailbug&bug_id=18493&
	  group_id=11597
	- Make correct fix for http://bugs.gentoo.org/show_bug.cgi?id=399451.
	  Thank Arfrever Frehtes Taifersar Arahesis <arfrever.fta at gmail.com>

*eix-0.23.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix MetadataCache::use_prefixport(), see:
	  http://bugs.gentoo.org/show_bug.cgi?id=399233
	- Add {tbz2} also for default compact output
	- Fix typo in eix-sync: http://bugs.gentoo.org/show_bug.cgi?id=399117
	- Fix and document behavior if path is specified for cache md5-or-*
	- Remove UTF-8 symbol from my name in some docs to allow building with
	  docutils + python-3.2: http://bugs.gentoo.org/show_bug.cgi?id=399451

*eix-0.23.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Scripts: Support for status line update; minor output improvements
	- Introduce new cache method metadata-md5-or-flat and make it default
	  for PORTDIR_CACHE_METHOD:
	  http://developer.berlios.de/feature/?func=detailfeature&
	  feature_id=5483&group_id=11597
	- Include unistd.h for isatty(). Thanks to <gokturk at binghamton.edu>,
	  see http://bugs.gentoo.org/show_bug.cgi?id=397589

*eix-0.23.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- scripts: Be less rigorous with set -f
	  This fixes some regressions of eix-0.23.4 (e.g. eix-remote).

*eix-0.23.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- scripts: Fix possible globbing problems