@@ -53,8 +53,8 @@ The following options are available:
 -U   Do not touch the database and omit the hooks after eix-update (@ entries)
      and do not show differences. This option implies -R
 -u   Update database only and show differences. This is equivalent to -0l@s ""
--+   Do not error on layman or failed hooks (! !! ~ @ @@ entries).
-     This can be overridden within the hooks by (un)setting NONFATAL_HOOKS.
+-F   Make layman or failed hooks (! !! ~ @ @@ entries) fatal. This can be
+     forced/overridden in hooks by (un)setting FATAL_HOOKS or calling die.
 -l   Do not call layman (and the !commands in ${eixsyncconf}).
      However, the !! lines and postponed hooks (@ and @@ entries)
      will be executed anyway.
@@ -89,7 +89,7 @@ The following options are available:
 }
 
 WarnOrDie() {
-	[ -n "${NONFATAL_HOOKS}" ] || die "${@}"
+	[ -z "${FATAL_HOOKS}" ] || die "${@}"
 	ewarn "${@}"
 }
 
@@ -220,7 +220,7 @@ DefaultOpts() {
 	doupdate=:
 	synchooks=:
 	test_for_root=:
-	NONFATAL_HOOKS=''
+	FATAL_HOOKS=''
 }
 
 DefaultOpts
@@ -232,7 +232,7 @@ Push opt "${@}"
 eval "set -- ${opt}"
 set +f
 OPTIND=1
-while getopts 'ids:02:Uu+l@SMNtTqwWL:c:C:o:rRemHh?' opt
+while getopts 'ids:02:UuFl@SMNtTqwWL:c:C:o:rRemHh?' opt
 do	case "${opt}" in
 	i)	DefaultOpts;;
 	d)	diffonly=:;;
@@ -244,7 +244,7 @@ do	case "${opt}" in
 		nohooks=:
 		skip_sync=:
 		server='';;
-	'+')	NONFATAL_HOOKS=':';;
+	F)	FATAL_HOOKS=':';;
 	l)	nolayman=:;;
 	'@')	nohooks=:;;
 	S)	synchooks=false;;
