@@ -2,7 +2,8 @@
 
 *eix-0.23.10
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
-	- eix-sync: Support for option -+ and variable NONFATAL_HOOKS.
+	- eix-sync: Make layman and hook errors non-fatal, by default.
+	  Use -F, FATAL_HOOKS, or the die function to revert old behavior.
 
 *eix-0.23.9
 *eix-0.23.8
